# locus

./: .gitignore  AGENTS.md  README.md  auto_brief.sh  build-log.md  cc-usage-daily.sh  claude-config-reverse-modification.md  com.claude-kb.flush.plist  com.claude-kb.monthly.plist  com.claude-kb.weekly.plist  com.locus.api.plist  com.locus.cc-usage.plist  com.locus.collect-news.plist  com.locus.news-bot.plist  com.locus.news-brief.plist  com.locus.news-feedback.plist  com.locus.nightly-improve.plist  com.locus.sync.plist  launchd-claude-auth-env.md  litellm-model-name-mismatch.md  local-llm-response-latency.md  news-app-kb-integration.md  news_feedback.sh  nightly-improve.sh  pyproject.toml  quartz-architecture-mismatch.md  settings.yaml  start-api.sh
.claude/: settings.json
.serena/: project.yml
daily/: 2026-04-11.md  2026-04-12.md
hooks/: _common.py  pre-compact.py  session-end.py  session-start.py
knowledge/: daily  index.md  log.md
knowledge/concepts/: claude-agent-sdk.md  claude-code-hooks.md  claude-memory-compiler.md  compile-py.md  daily-log.md  flush-py-background-process.md  knowledge-base-index-retrieval.md
scripts/: active-session.json  api_server.py  collect_news.py  compile.py  config.py  flush.py  flush_periodic.py  import_cc_feed.py  lint.py  lint_fix.py  monthly.py  news_bot.py  news_config.py  periodic-state.json  query.py  reindex.py  review.py  session_registry.py  setup-codex.sh  sync.py  update_index.py  utils.py  weekly.py
scripts/backends/: __init__.py  anthropic_api.py  (+2 more)
tests/: conftest.py  smoke.sh  test_lint_fix.py  test_utils.py
(+8 files in other folders)
